tests/__snapshots__/validation-import-wrong-option-value-type-stderr.snap.txt
Error: Option 'import' requires a value of type list.

  1 | {
  2 |   "import": "ts-blank-space/register",
    |             ~~~~~~~~~~~~~~~~~~~~~~~~~
  3 |   "testFileMatch": [
  4 |     "examples/*.test.*"
  5 |   ]

      at ./tstyche.config.json:2:13

